# GraphForm

./: .gitignore  MANIFEST.in  Makefile  README.md  bitetrahedron.py  graphform.py  pyproject.toml  requirements.txt  setup.py
graphform/: __init__.py
nodebox/: graphform-noface.py  graphform-sorted-stiff.py  graphform-sorted.py  graphform.py  spiral.py
old/pygame/: dodecahedron.py  icosahedron-with-gap.py  isocahedron.py  octahedron.py  pentagonal-bipyramid.py
p5py/: Makefile  dodecahedron.py  fcc.py  graphform.py  icosahedron-with-gap.py  isocahedron.py  octahedron.py  pentagonal-bipyramid-with-gap.py  pentagonal-bipyramid.py  requirements.txt
pygame/: dodecahedron.py  graphform-sorted-stiff.py  graphform-sorted.py  graphform.py  graphform_original.py  icosahedron-with-gap.py  isocahedron.py  nodebox_wrapper.py  octahedron.py  pentagonal-bipyramid-with-gap.py  pentagonal-bipyramid.py
samples/: bitetrahedron.py  dodecahedron.py  fcc.py  graphform.py  icosahedron-with-gap.py  icosahedron.py  octahedron.py  pentagonal-bipyramid-with-gap.py  pentagonal-bipyramid.py
