[tool.poetry]
name = "graphform"
version = "0.2"
description = "Recover the 3D structure from a graph."
authors = ["vitroid <vitroid@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
p5 = "^0.8.0"
numpy = "^2"
networkx = "^3.4.2"
pillow = "^9.0.0"
attrdict = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
